--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd-number{
     background-color: #FFA7A7;
-    font-family: 'Verdana', 'DejaVu Sans', sans-serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
     font-size: 24px;
 }
 
