--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,27 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* SOLUTION */
+
+.modal {
+  display: flex;
+  padding: 16px;
+  gap: 16px;
+}
+.icon {
+  flex-shrink: 0;
+}
+
+.header {
+  font-size: 20px;
+  font-weight: bold;
+}
+.first-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.first-row, .text {
+  margin-bottom: 12px;
+}
